--- a/my-new-project/app/styles/task.css
+++ b/my-new-project/app/styles/task.css
@@ -1,3 +1,4 @@
 .task-tab{ background: #fff;padding: 50px 20px;}
 .task-tab .fa-file-zip-o{ font-size: 20px;color: #337ab7;}
 .task-tab td span{ margin-left: 10px;}
+.btn-save{ float: right;}
