--- a/my-new-project/app/views/marking.html
+++ b/my-new-project/app/views/marking.html
@@ -1,19 +1,36 @@
 <div class="mark-box" ng-init="markingFunc.initFunc()">
 	<div class="test-paper">
+		<a href="#/checking/{{ markingFunc.data.uInfo.cid}}">
+			<button class="btn btn-success">返回</button>
+		</a>
 		<h4 class="paper-title">C++第一章在线测试</h4>
 
+		<!-- 答题人信息 -->
+		<div class="user-info">
+			<span>答题人： </span>{{ markingFunc.data.uInfo.uname }}
+			<span>耗时： </span>{{ markingFunc.data.uInfo.mtime }}
+			<span>得分： </span><mark class="lf-font-blue">{{ markingFunc.data.uInfo.score }}分</mark> 
+		</div>
 
 <!-- 单选 -->
 		<h5 class="exam-title">一、单选题</h5>
 		<div ng-repeat="qu in sinSelect" ng-init="index = ($index + 1)">
 			<!-- 单选 -->
-			<h5 class="que-title"><span>{{ $index+1 }}.</span>{{ qu.question }}</h5>
+			<h5 class="que-title">
+				<span>{{ $index+1 }}.</span>{{ qu.question }}
+			</h5>
 			<div class="radio" ng-repeat="an in aIndex track by $index" ng-show=" qu[an]!= '' ">
 			  	<label>
 			    	<input type="radio" name="options{{index}}" id="options{{index}}" value="{{$index+1}}" ng-model="qu.answer">
-			    	{{ qu[an] }}
+			    	{{ $index + 1 }}. {{ qu[an] }}
 			  	</label>
 			</div>
+			<!-- 给出判断 -->
+			<div class="correct-tips">
+				<i class="fa fa-check" ng-class="{ 'fa-check': qu.flag, 'fa-times': !qu.flag}"></i> 
+				<span class="lf-font-blue">正确答案： {{ qu.correct }}</span>
+			</div>
+				
 		</div>
 
 <!-- 多选题 -->
@@ -23,12 +40,14 @@
 			<h5 class="que-title"><span>{{ $index+1 }}.</span>{{ qu.question }}</h5>
 			<div class="checkbox" ng-repeat="an in aIndex track by $index" ng-show=" qu[an]!= '' ">
 			  	<label>
-				    <input type="checkbox" ng-value="{{ $aIndex+1 }}" ng-model="sel" 
-				    ng-change="markingFunc.checkBoxSel(sel, {{ $index+1 }}, qu)">
-				    <!-- ng-change="markingFunc.checkBoxSel(sel{{ $index+1 }}, {{ $index+1 }} )" 
-				    ng-true-value="{{$index+1}}" ng-false-value="0" -->
-				    {{ qu[an] }}
+				    <input type="checkbox" ng-value="{{ $aIndex+1 }}" ng-model="qu.ans[ $index + 1 ]">
+				    {{ $index + 1 }}. {{ qu[an] }}
 			    </label>
+			</div>
+			<!-- 给出判断 -->
+			<div class="correct-tips">
+				<i class="fa fa-check" ng-class="{ 'fa-check': qu.flag, 'fa-times': !qu.flag}"></i> 
+				<span class="lf-font-blue">正确答案： {{ qu.correct }}</span>
 			</div>
 		</div>
 
@@ -39,14 +58,21 @@
 			<h5 class="que-title"><span>{{ $index+1 }}.</span>{{ qu.question }}</h5>
 			<div class="checkbox">
 			  	<label class="radio-inline">
-				  	<input type="radio" name="check{{$index+1}}" ng-model="qu.answer" value="1"> {{ qu.answer1 }}
+				  	<input type="radio" name="check{{$index+1}}" ng-model="qu.answer" value="1"> 1. {{ qu.answer1 }}
 				</label>
 				<label class="radio-inline">
-				  	<input type="radio" name="check{{$index+1}}" ng-model="qu.answer" value="2"> {{ qu.answer2 }}
+				  	<input type="radio" name="check{{$index+1}}" ng-model="qu.answer" value="2"> 2. {{ qu.answer2 }}
 				</label>
+			</div>
+			<!-- 给出判断 -->
+			<div class="correct-tips">
+				<i class="fa fa-check" ng-class="{ 'fa-check': qu.flag, 'fa-times': !qu.flag}"></i> 
+				<span class="lf-font-blue">正确答案： {{ qu.correct }}</span>
 			</div>
 		</div>
 
-		<button class="btn btn-primary" ng-click="markingFunc.submitPaper()">确定跳转</button>
+		<a href="#/checking/{{ markingFunc.data.uInfo.cid}}">
+			<button class="btn btn-primary" ng-click="markingFunc.submitPaper()">查看完毕</button>
+		</a>
 	</div>
 </div>
